--- a/main_app/templates/hod_template/add_file_admin_template.html
+++ b/main_app/templates/hod_template/add_file_admin_template.html
@@ -4,24 +4,86 @@
 
 
 {% block content %}
+<style>
+    input[type="text"],
+    input[type="file"],
+    select {
+        border: 2px solid #ccc;
+        padding: 10px;
+        width: 100%;
+        border-radius: 8px;
+        transition: all 0.3s ease;
+        font-family: Vazir;
+    }
+
+    input[type="text"]:hover,
+    input[type="file"]:hover,
+    select:hover {
+        border-color: #66afe9;
+        box-shadow: 0 0 8px rgba(102, 175, 233, 0.6);
+    }
+
+    input[type="text"]:focus,
+    input[type="file"]:focus,
+    select:focus {
+        border-color: #28a745;
+        box-shadow: 0 0 10px rgba(40, 167, 69, 0.6);
+        outline: none;
+    }
+    h4{
+        font-family: Vazir;
+        font-size: 30px;
+    }
+    .form-group{
+         font-family: Vazir;
+         font-size: 18px;
+         
+        
+    }
+    .ui-autocomplete {
+    font-family: 'Vazir', sans-serif !important;
+    font-size: 14px;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    max-height: 200px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    z-index: 9999;
+    border-radius: 6px;
+    padding: 5px;
+}
+
+.ui-menu-item-wrapper {
+    padding: 8px 10px;
+    cursor: pointer;
+}
+
+.ui-menu-item-wrapper:hover {
+    background-color: #f0f0f0;
+    color: #007bff;
+    border-radius: 4px;
+   
+}
+   
+</style>
     <section class="content">
         <div class="container-fluid">
             <div class="row d-flex justify-content-center align-items-center ">
-                <div class="col-md-4 mb-5 w-100" >
-                    <div class="card" style="background-color: #FBFBFB">
+                <div class="col-md-4 mb-5 w-100 " >
+                    <div class="card rounded-4 " style="background-color: #f9f9f9">
                         <div class="card-header">
                             <h4 style="text-align: center">آپلود فیش حقوقی</h4>
                         </div>
                         <!-- /.card-header -->
-                        <div class="card-body w-100 d-flex flex-column justify-content-center align-items-center text-center" style="width: 100%;margin: auto">
+                        <div class="card-body w-100 d-flex flex-column justify-content-center align-items-center text-center " style="width: 100%;margin: auto">
                             <table id="example2" class="table table-bordered table-hover">
                                 <thead class="thead-dark">
 
 
-                                <form method="POST" class="post-form" enctype="multipart/form-data">
+                                <form method="POST" class="post-form rounded-5" enctype="multipart/form-data">
                                     {% csrf_token %}
                                     {% for field in form %}
-                                        <div class="form-group d-flex flex-column" style="width: 250px;">
+                                        <div class="form-group d-flex flex-column" style="width: 300px;">
                                             {{ field.errors }}
                                             {{ field.label_tag }}<br>
                                             {{ field }}
@@ -39,4 +101,48 @@
             </div>
         </div>
     </section>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
+<script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script>
+<script>
+$("#id_first_name").autocomplete({
+    source: function(request, response) {
+        $.ajax({
+            url: "{% url 'autocomplete_name' %}",
+            data: {
+                term: request.term
+            },
+            success: function(data) {
+                response(data);
+            }
+        });
+    },
+    minLength: 2,
+});
+
+$("#id_last_name").autocomplete({
+        source: function(request, response) {
+            $.ajax({
+                url: "{% url 'autocomplete_last_name' %}",
+                data: { term: request.term },
+                success: function(data) {
+                    response(data);
+                }
+            });
+        },
+        minLength: 2,
+    });
+document.addEventListener("DOMContentLoaded", function () {
+    const onlyLetters = (e) => {
+        const char = String.fromCharCode(e.which);
+        if (!/^[\u0600-\u06FFa-zA-Z\s]+$/.test(char)) {
+            e.preventDefault();
+        }
+    };
+
+    document.getElementById("id_first_name").addEventListener("keypress", onlyLetters);
+    document.getElementById("id_last_name").addEventListener("keypress", onlyLetters);
+});
+</script>
+
 {% endblock content %}
