--- a/main_app/templates/kh_template/manage_kh_change_password.html
+++ b/main_app/templates/kh_template/manage_kh_change_password.html
@@ -70,7 +70,7 @@ hr {
                     بدون تصویر
                     {% else %}
                     <div class="img-cover-outline w-100 h-100 bg-info d-flex justify-content-center align-items-end rounded-bottom-circle ">
-                    <img class="img-fluid mb-4 img-circle object-fit-cover" src="{{ kh.profile_pic }}" alt="Your Photo" style="outline: white solid;">
+                    <img class="img-fluid mb-4 img-circle object-fit-cover " src="{{ kh.profile_pic }}" alt="Your Photo" style="outline: white solid;">
                     {% endif %}
                 </div>
                 </div>
@@ -91,14 +91,14 @@ hr {
                 </div>
             </div>
             <div class="col-md-9">
-                <div class="user-info w-full mt-3">
-                    <div class="d-flex align-items-center mt-5 ">
+                <div class="user-info col-12 mt-3">
+                    <div class="d-flex align-items-center mt-5 flex-wrap">
                 
-                    <h4 class="mx-2 mb-0"><i class="fa-solid fa-briefcase"><span class="s-1"></i>&nbsp;&nbsp;{{ user.position }}</span></h4>
-                    <hr style="width:65%;padding-right: 40px;">
+                    <h4 class="mx-2 mb-0 d-flex align-items-center"><i class="fa-solid fa-briefcase"><span class="s-1 ms-2"></i>&nbsp;&nbsp;{{ user.position }}</span></h4>
+                    <hr style="flex-grow-1 mx-3 mt-2" style="height: 1px; background-color: #ccc;">
                             </div>
                     </div>
-                    <div class="user-info-main w-75 mt-4">
+                    <div class="user-info-main mt-4 col-12 col-md-8">
                         <table class="table table-borderless me-3 font-weight-bold">
                             <tbody>
                                 <tr>
@@ -118,13 +118,13 @@ hr {
                         </table>
                     </div>
 
-                    <div class="career w-full">
-                        <div class="d-flex align-items-center mt-5 ">
+                    <div class="career col-12">
+                        <div class="d-flex align-items-center mt-5 flex-wrap">
                 
-                    <h4 class="mx-4 mb-0"><i class="fa-solid fa-briefcase"></i>&nbsp;&nbsp;اطلاعات تکمیلی</h4>
-                    <hr style="width: 65%;">
+                         <h4 class="mx-4 mb-0"><i class="fa-solid fa-briefcase"></i>&nbsp;&nbsp;اطلاعات تکمیلی</h4>
+                         <hr style="width: 65%;">
                             </div>
-                        <div class="user-career-info w-50 mt-4">
+                        <div class="user-career-info mt-4 col-12 col-md-8">
                             <table class="table table-borderless me-3 font-weight-bold">
                                 <tbody>
                                     <tr>
@@ -146,23 +146,39 @@ hr {
                     </div>
                     <hr style="background-color:lightgray;height:1px;width: 100%;">
 
-                    <div class="button-section w-100 mt-4">
-                         <nav class="w-full d-flex flex-row gap-2 mt-4 align-items-center ">
-                        <a href="#" class="btn btn-info custom-btn w-25"><i class="fa-solid fa-folder-open"></i>&nbsp;&nbsp;پرونده پرسنلی</a></button>
-                        <a href="#" class="btn btn-info custom-btn w-25"><i class="fa fa-download"></i>&nbsp;&nbsp;شرح شغل</a></button>
-                        <a href="#" class="btn btn-info custom-btn w-25"><i class="fa-solid fa-file"></i>&nbsp;&nbsp;احکام</a></button>
-                        <a href="#" class="btn btn-info custom-btn w-25"><i class="fa-solid fa-list-check"></i>&nbsp;&nbsp;ارزیابی علمکرد</a></button>
-                        </nav>
+                     <div class="button-section w-100 mt-5">
+                        <div class="d-flex flex-wrap gap-2 justify-content-center">
+                            <a href="#" class="btn btn-info flex-grow-1 flex-md-grow-0 col-12 col-md-5 col-lg-4">
+                                <i class="fa-solid fa-folder-open"></i>&nbsp;&nbsp;پرونده پرسنلی
+                            </a>
+                            <a href="#" class="btn btn-info flex-grow-1 flex-md-grow-0 col-12 col-md-5 col-lg-4">
+                                <i class="fa fa-download"></i>&nbsp;&nbsp;شرح شغل
+                            </a>
+                            <a href="#" class="btn btn-info flex-grow-1 flex-md-grow-0 col-12 col-md-5 col-lg-4">
+                                <i class="fa-solid fa-file"></i>&nbsp;&nbsp;احکام
+                            </a>
+                            <a href="#" class="btn btn-info flex-grow-1 flex-md-grow-0 col-12 col-md-5 col-lg-4">
+                                <i class="fa-solid fa-list-check"></i>&nbsp;&nbsp;ارزیابی عملکرد
+                            </a>
                         </div>
-                        <div class="button-section-part2 w-100 d-flex flex-row align-items-center gap-2 mt-4">
-                        <a href="#"  class="btn btn-info custom-btn w-25"><i class="fa-solid fa-chart-simple"></i>&nbsp;&nbsp;چارت سازمانی</a></button>
-                        {% url 'all_user_download_file' as all_user_download_file %}
-                        <a href="{{ all_user_download_file }}" class="btn btn-info custom-btn w-25"><i class="fa-solid fa-money-check-dollar"></i>&nbsp;&nbsp;فیش حقوقی</a></button>
-                        <a href="#" class="btn btn-info custom-btn w-25"><i class="fa-solid fa-chart-line"></i>&nbsp;&nbsp;کارکرد ماهانه</a></button>
-                        <a href="#" class="btn btn-info custom-btn w-25"><i class="fa-solid fa-paste"></i>&nbsp;&nbsp;دوره های آموزشی</a></button>
+                    </div>
+
+                    <div class="button-section-part2 w-100 mt-2">
+                        <div class="d-flex flex-wrap gap-2 justify-content-center">
+                            <a href="#" class="btn btn-info flex-grow-1 flex-md-grow-0 col-12 col-md-5 col-lg-4">
+                                <i class="fa-solid fa-chart-simple"></i>&nbsp;&nbsp;چارت سازمانی
+                            </a>
+                            <a href="#" class="btn btn-info flex-grow-1 flex-md-grow-0 col-12 col-md-5 col-lg-4">
+                                <i class="fa-solid fa-money-check-dollar"></i>&nbsp;&nbsp;فیش حقوقی
+                            </a>
+                            <a href="#" class="btn btn-info flex-grow-1 flex-md-grow-0 col-12 col-md-5 col-lg-4">
+                                <i class="fa-solid fa-chart-line"></i>&nbsp;&nbsp;کارکرد ماهانه
+                            </a>
+                            <a href="#" class="btn btn-info flex-grow-1 flex-md-grow-0 col-12 col-md-5 col-lg-4">
+                                <i class="fa-solid fa-paste"></i>&nbsp;&nbsp;دوره‌های آموزشی
+                            </a>
                         </div>
-                </div>
-            </div>
+                    </div>
            {% endfor %}
         </div>
     </div>
